--- a/src/styles/AppLight.scss
+++ b/src/styles/AppLight.scss
@@ -66,7 +66,15 @@
     color: rgb(197, 197, 197);
   }
 }
-
+.search {
+  background-image: url(../assets/toolbar/glassdark.png);
+}
+.trash{
+  background-image: url(../assets/toolbar/trashdark.png);
+}
+.takeOn{
+  background-image: url(../assets/toolbar/bookmarkdark.png);
+}
   .titleBarButton{
     background-color: rgb(241, 241, 241);
     border-color: rgb(213, 213, 213);
